[package]
name = "ecosystem-aqua-staked-token"
version = "0.1.0"
authors = ["AquaDao Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

orml-traits = { path = "../../../orml/traits", default-features = false }

acala-primitives = { path = "../../../primitives", default-features = false }
module-support = { path = "../../../modules/support", default-features = false }
ecosystem-aqua-dao = { path = "../dao", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
orml-tokens = { path = "../../../orml/tokens" }
module-currencies = { path = "../../../modules/currencies" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"acala-primitives/std",
	"module-support/std",
	"ecosystem-aqua-dao/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
